--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -143,16 +143,16 @@
   website:
   github:
 
-- name: Markus Neuschäfer
+- name: Dr. Markus Neuschäfer
   img: markusneuschaefer
   staff: 1
   board: 0
   advisory: 0
   position:
-  bio: ""
+  bio: "Dr. Markus Neuschäfer betreut als Projektleiter die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagsbereich."
   mail: markus.neuschaefer@okfn.de
-  twitter:
-  website:
+  twitter: mneuschaefer
+  website: 
   github:
 
 - name: Daniel Dietrich
