Delete Maria's webseite

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -51,7 +51,7 @@
   bio: "Maria Reimer ist Projektleiterin von Jugend hackt. Sie hat Public Administration und Public Policy in Münster, Enschede (Niederlande) und Erfurt studiert. Neben der Open Knowledge Foundation Deutschland arbeitet sie halbtags für eine Bundestagsabgeordnete. Ehrenamtlich setzt Maria sich im Führungskreis von Transparency International Deutschland für Informationsfreiheit ein."
   mail: maria.reimer@okfn.de
   twitter: malienamadrina
-  website: http://www.oderfunk.de
+  website: 
 
 - name: Katharina Meyer
   img: katharinameyer
