Paulas Team Snippet

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -70,9 +70,9 @@
   board: 0
   advisory: 0
   position:
-  bio: ""
+  bio: "Paula organisiert zusammen mit Maria Jugend hackt. Über die Veranstaltung hat sie auch ihre Masterarbeit im Studiengang „Medien in der Bildung“ an der PH Freiburg geschrieben. Davor hat sie u.a. für das Fraunhofer Institut gearbeitet und Dokumentarfilme gedreht. Offene Daten findet Paula super, weil sie zu aktiver demokratischer Partizipation einladen."
   mail: paula.glaser@okfn.de
-  twitter:
+  twitter: rinhia
   website:
 
 - name: Bela Seeger
