Add Michaels team photo

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -51,7 +51,7 @@
   bio: "Maria Reimer ist Projektleiterin von Jugend hackt. Sie hat Public Administration und Public Policy in Münster, Enschede (Niederlande) und Erfurt studiert. Neben der Open Knowledge Foundation Deutschland arbeitet sie halbtags für eine Bundestagsabgeordnete. Ehrenamtlich setzt Maria sich im Führungskreis von Transparency International Deutschland für Informationsfreiheit ein."
   mail: maria.reimer@okfn.de
   twitter: malienamadrina
-  website: 
+  website:
 
 - name: Katharina Meyer
   img: katharinameyer
@@ -120,7 +120,7 @@
   website:
 
 - name: Michael Hörz
-  img:
+  img: michaelhoerz
   staff: 1
   board: 0
   advisory: 0
@@ -150,7 +150,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Dr. Markus Neuschäfer betreut als Projektleiter die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagsbereich."
+  bio: "Dr. Markus Neuschäfer betreut als Projektleiter die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagswesen."
   mail: markus.neuschaefer@okfn.de
   twitter: mneuschaefer
   website:
