Added team details for knut

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -137,11 +137,11 @@
   board: 0
   advisory: 0
   position:
-  bio: ""
+  bio: "Knut arbeitet seit Februar 2015 als studentische Aushilfe bei der OKF DE. Er studiert Informatik an der TU Berlin und unterstützt hauptsächlich die Projekte Coding da Vinci und Jugend Hackt."
   mail: knut.perseke@okfn.de
-  twitter:
+  twitter: knutator
   website:
-  github:
+  github: knutator2
 
 - name: Markus Neuschäfer
   title: Dr.
