Minor update to Bela's description

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -81,7 +81,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela Seeger startete im November 2014 als Praktikant bei der OKF DE und ist seit Januar 2015 fest angestellt. Er unterstützt Helene Hahn's Projekt „Coding da Vinci“ als Projektassistent, leitet eigene Projekte und übernimmt Aufgaben der Öffentlichkeitsarbeit für die Organisation."
+  bio: "Bela hält einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 als Praktikant bei der OKF DE. Seit Januar 2015 fest angestellt. Er unterstützt Helene Hahn's Projekt „Coding da Vinci“ als Projektassistent, leitet eigene Projekte und übernimmt Aufgaben der Öffentlichkeitsarbeit für die Organisation."
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
