Update Bio Knut

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -137,7 +137,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Knut arbeitet seit Februar 2015 als studentische Aushilfe bei der OKF DE. Er studiert Informatik an der TU Berlin und unterstützt hauptsächlich die Projekte Coding da Vinci und Jugend Hackt."
+  bio: "Knut arbeitet seit Februar 2015 als studentische Aushilfe bei der OKF DE. Er studiert Informatik an der TU Berlin und unterstützt verschiedene Projekte von der technischen Seite. Knut beschäftigt sich vor allem mit mobilen Anwendungen und Webentwicklung. Außerdem arbeitet er zurzeit im Projekt Mnemosyne, das es sich zur Aufgabe gemacht hat, Museumsbesuchern die Möglichkeit zu geben, Archive von kulturellen Institutionen neu zu entdecken."
   mail: knut.perseke@okfn.de
   twitter: knutator
   website:
