umlaute in Namen als Projektleiter testen

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -143,7 +143,7 @@
   website:
   github: knutator2
 
-- name: Markus Neuschäfer
+- name: Markus Neusch&auml;fer
   title: Dr.
   img: markusneuschaefer
   staff: 1
