Julia Team description added

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -37,7 +37,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Julia setzt als Projektleiterin Projekte im Bereich Civic Apps and Open Data um. Sie war unter anderem verantwortlich für die Projekte Stadt Land Code, Apps and the City und Energy Hack. Vor ihrer Tätigkeit bei der OKF DE hat sie freiberuflich an Projekten im Bereich online Marketing, Kampagnenkonzeption und Videoproduktion gearbeitet. Aktuell arbeitet sie gemeinsam mit Daniel Dietrich, Fiona Krankenbürger und Marcus Dapp an dem Projekt Code for Germany. Eine besondere Herausforderung im Bereich Open Data liegt für sie darin, Daten nicht nur zu öffnen, sondern Multiplikatoren dazu anzuregen spannende Werkzeuge und Apps aus den Daten und Informationen zu entwickeln, um sie einer breiten Masse an Menschen zugänglich zu machen und den Nutzen für Gesellschaft und Demokratie aufzuzeigen."
+  bio: "Julia arbeitet seit 2012 als Projektleiterin bei der Open Knowledge Foundation. Ihr Schwerpunkt liegt auf Projekten im Bereich Open Data und Civic Tech. Sie hat in den letzten Jahren eine Reihe an Community-Projekten umgesetzt, darunter „Stadt Land Code“ Deutschlands ersten Inkubator für Civc Tech und eine Reihe von Open Data Hackathons. Aktuell arbeitet sie an dem Projekt Code for Germany, einer deutschlandweiten Community, die digitale Werkzeuge und Anwendungen aus offenen Daten entwickelt. Julia hat Design und Neue Medien studiert und vor der Open Knowledge Foundation an politischen Kommunikationskampagnen mitgearbeitet. Sie engagiert sich im Verein Digitale Gesellschaft e. V. und spricht auf Konferenzen über freies Wissen und offene Tools."
   mail: julia.kloiber@okfn.de
   twitter: j_kloiber
   website:
